methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:8: error: ')' expected but ';' found.
  def ligne2(c:Color,v:Color) {diagD(c);droite()avance();gauche();diagG(v);droite();avance();gauche();diagD(c)droite(avance();gauche();diagG(v);}
                                                                                                                             ^